--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="content">
-        <div class="section">
+        <div class="section" id="section1">
             <div class="intro">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
@@ -31,11 +31,11 @@
                 <p>this is a placeholder for an image</p>
             </div>
         </div>
-        <div class="section">
+        <div class="section" id="section2">
             <div class="card-title">
                 <h2>Some random information.</h2>
             </div>
-            <div>
+            <div class="cards">
                 <div class="card-mini">
                     <div class="box"></div>
                     <div class="subtext">
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </div>
-        <div class="section">
+        <div class="section" id="section3">
             <div class="quote">
                 <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             </div>
@@ -70,7 +70,7 @@
                 <p>-Thor, God of Thunder</p>
             </div>
         </div>
-        <div class="section">
+        <div class="section" id="section4">
             <div class="box">
                 <div>
                     <h4>Call to action! It's time!</h4>
