--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="intro">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <button>Sign Up</button>
+                <button>Sign up</button>
             </div>
             <div class="image">
                 <p>this is a placeholder for an image</p>
