--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
                 <div>
-                    <button>Sign up</button>
+                    <button id="call-button">Sign up</button>
                 </div>
             </div>
         </div>
